# pdfcraft

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: desktop-build.yml
messages/: ar.json  de.json  en.json  es.json  fr.json  it.json  ja.json  ko.json  pt.json  zh-TW.json  zh.json
public/workers/: pdf-to-docx.worker.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/lib/pdf/processors/: grid-combine.ts
